--- a/index.html
+++ b/index.html
@@ -31,8 +31,180 @@
       </div>
     </div>
     <div id="main">
-      <div>2</div>
-      <div>2</div>
+      <div>
+        <div>
+          <div>
+            <h3>Rentals</h3>
+            <p>For hours & days</p>
+          </div>
+          <div>
+            <h3>Subscriptions</h3>
+            <p>For months & years</p>
+          </div>
+        </div>
+        <div>
+          <h2>Rentals</h2>
+          <p>Self drive car rentals in India</p>
+          <input type="text" />
+          <input type="text" />
+          <button>Search</button>
+        </div>
+      </div>
+      <div>
+        <img
+          src="https://www.revv.co.in/assets/RentalImages/HomeScreen/heroCarousel/ST_Desktop_1_FG.webp"
+          alt=""
+        />
+        <div><span></span><span></span><span></span> /*for dot*/</div>
+      </div>
+    </div>
+
+    <div>
+      <h2>Featured</h2>
+      <div>
+        <span><</span>
+        <span>></span>
+      </div>
+      <div>
+        <div>
+          <img
+            src="https://revvselfdrivecar.s3.us-west-2.amazonaws.com/offers/flat_10_off_1.png"
+            alt=""
+          />
+        </div>
+        <div>
+          <img
+            src="https://revvselfdrivecar.s3.us-west-2.amazonaws.com/10+days.png"
+            alt=""
+          />
+        </div>
+        <div>
+          <img
+            src="https://revvselfdrivecar.s3.us-west-2.amazonaws.com/15+days.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+    <div>
+      <h2>Sanitized and safe cars</h2>
+      <div>
+        <span><</span>
+        <span>></span>
+      </div>
+      <div>
+        <div>
+          <img
+            src="https://revvselfdrivecar.s3-us-west-2.amazonaws.com/thumbnails/Group+84.png"
+            alt=""
+          />
+        </div>
+        <div>
+          <img
+            src="https://revvselfdrivecar.s3-us-west-2.amazonaws.com/staging_images/banner_sanitised_01-min.jpg"
+            alt=""
+          />
+        </div>
+        <div>
+          <img
+            src="https://revvselfdrivecar.s3-us-west-2.amazonaws.com/staging_images/banner_sanitised_02-min.jpg"
+            alt=""
+          />
+        </div>
+        <div>
+          <img
+            src="https://revvselfdrivecar.s3-us-west-2.amazonaws.com/staging_images/banner_sanitised_03-min.jpg"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <h2>Offers</h2>
+      <img
+        src="https://revvselfdrivecar.s3.us-west-2.amazonaws.com/offers/flat_10_off_2.png"
+        alt=""
+      />
+    </div>
+
+    <div>
+      <h2>Why Revv?</h2>
+      <div>
+        <span><</span>
+        <span>></span>
+      </div>
+      <div>
+        <div>
+          <img
+            src="https://revvselfdrivecar.s3.us-west-2.amazonaws.com/offers/flat_10_off_1.png"
+            alt=""
+          />
+        </div>
+        <div>
+          <h4>Home delivevry & return</h4>
+          <p>On time door step service,at your preferred location and time</p>
+        </div>
+        <div>
+          <img
+            src="https://revvselfdrivecar.s3.us-west-2.amazonaws.com/10+days.png"
+            alt=""
+          />
+        </div>
+        <div>
+          <h4>Flexible pricing plans</h4>
+          <p>Choose 'unlimited kms' or 'with fuel' plans</p>
+        </div>
+        <div>
+          <img
+            src="https://revvselfdrivecar.s3.us-west-2.amazonaws.com/15+days.png"
+            alt=""
+          />
+        </div>
+        <div>
+          <h4>Well maintained cars</h4>
+          <p>
+            Regular service & maintenance; <br />
+            inspected before each trip
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <h1>FAQs</h1>
+      <a href="#">View all</a>
+    </div>
+    <div>
+      <h3>Is there a speed limit?</h3>
+      <p>
+        Revv allows up to 125 km/hr. However it is 80 km/hr in a few cities
+        where some cars might be equipped with speed governors as per government
+        directives. Revv strictly advises to follow local speed limits.
+      </p>
+
+      <hr />
+      <h3>Can I extend/ cancel/ modify?</h3>
+      <p>
+        Yes, extensions are possible subject to availability & charges.
+        Cancellations & modifications will attract nominal charges as per our
+        policy.
+      </p>
+
+      <hr />
+      <h3>Booking criteria & documents?</h3>
+      <p>
+        Min. 21 years old, have valid original government ID (Aadhar, Passport,
+        or PAN only) and a valid driving licence for “Light Motor Vehicles”,
+        which is min. 1 year old at the time of starting the trip.
+      </p>
+      <hr />
+      <h3>Are there any restricted areas?</h3>
+      <p>
+        Leh/Ladhakh, Spiti Valley & Kaza/Nako regions are not permitted to take
+        Revv cars. Customer will be fully liable for any damages incurred to the
+        car in that region.
+      </p>
     </div>
   </body>
 </html>
