--- a/faq.html
+++ b/faq.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ's</title>
     <link rel="stylesheet" href="faq.css">
-    <!-- <link rel="stylesheet" href="./styles/navbar.css"> -->
+    <link rel="stylesheet" href="Navbar.css">
+    <link rel="stylesheet" href="footer.css">
 
 </head>
 <body>
-    <div id="navbar"></div>
+    <div id="Navbar"></div>
 
     <div id="main">
         <div id="sidebar">
@@ -512,4 +513,4 @@
     <div id="footer"></div>
 </body>
 </html>
-<script type="module" src="faq.html"></script>
+<script type="module" src="faq.js"></script>
