add linking all pages

--- a/faq.html
+++ b/faq.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ's</title>
-    <link rel="stylesheet" href="faq.css">
-    <link rel="stylesheet" href="Navbar.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="./style/faq.css">
+    <link rel="stylesheet" href="./style/Navbar.css">
+    <link rel="stylesheet" href="./style/footer.css">
 
 </head>
 
@@ -609,4 +609,4 @@
 </body>
 
 </html>
-<script type="module" src="faq.js"></script>
+<script type="module" src="./script/faq.js"></script>
