--- a/index.html
+++ b/index.html
@@ -243,14 +243,5 @@
 </body>
 
 </html>
-<script type="module">
-  import { Navbar } from '../components/Navbar.js'
-  import { footer } from '../components/footer.js'
 
-  let navbar_div = document.getElementById('Navbar')
-  navbar_div.innerHTML = Navbar();
-
-  let footer_div = document.getElementById('footer')
-  footer_div.innerHTML = footer();
-</script>
-<script src="./script/index.js"></script>
+<script type="module" src="./script/index.js"></script>
