--- a/mahindra.html
+++ b/mahindra.html
@@ -262,7 +262,7 @@
 
 <body>
 
-    <div id="navbar"></div>
+    <div id="Navbar"></div>
 
     <div id="photo">
         <img src="https://wallpaperaccess.com/full/2825482.jpg">
@@ -467,13 +467,5 @@
 </body>
 
 </html>
-<script type="module">
-    import { Navbar } from '../components/Navbar.js'
-    import { footer } from '../components/footer.js'
-  
-    let navbar_div = document.getElementById('Navbar')
-    navbar_div.innerHTML = Navbar();
-  
-    let footer_div = document.getElementById('footer')
-    footer_div.innerHTML = footer();
-  </script>
+
+<script type="module" src="./script/mahindra.js"></script>
