--- a/failed.html
+++ b/failed.html
@@ -23,7 +23,7 @@
 <body>
     <div class = "container"> 
     <h1>PAYMENT FAILED</h1>
-    <img src="https://c.tenor.com/nl7l4iLnzboAAAAi/fail-fault.gif" alt="success">
+    <a href="./index.html"><img src="https://c.tenor.com/nl7l4iLnzboAAAAi/fail-fault.gif" alt="success"></a>
 </div>
 </body>
 </html>
