--- a/otp.html
+++ b/otp.html
@@ -75,7 +75,7 @@
     <div id="container">
         <h2>Phonepe</h2>
         <img class="process"></img>
-        <h1>Enter the 5 digit OTP sent to <span>9876543210</span><span>( OTP: 12345 )</span></h1>
+        <h1>Please enter the 5 digit OTP  <span> :</span> <span> OTP: 12345 </span></h1>
         <div class="userInput">
             <input type="number" maxlength="1" class="inputotp1" onkeyup="isempty()">
             <input type="number" maxlength="1" class="inputotp2" onkeyup="isempty()">
