--- a/successfull.html
+++ b/successfull.html
@@ -24,7 +24,7 @@
     <div class = "container"> 
     <h1>PAYMENT SUCCESSFULL</h1>
     <!-- <img src="https://media3.giphy.com/media/rf1beuhHrO4MYxpgVt/giphy.gif?cid=ecf05e47i3a47aeg10anlqz2wjhnsit7dcjkm58ogshdikha&rid=giphy.gif&ct=g" alt="success"> -->
-        <img src="https://c.tenor.com/40bYuytgRvYAAAAj/hedge-pay-hpay.gif" alt="">
+     <a href="./index.html"><img src="https://c.tenor.com/40bYuytgRvYAAAAj/hedge-pay-hpay.gif" alt=""></a>
 </div>
 </body>
 </html>
