--- a/mahindra.html
+++ b/mahindra.html
@@ -66,11 +66,13 @@
 
         #box>button {
             padding: 10px 120px;
-            margin-top: 30px;
-            margin-left: 25%;
+            margin-top: 30px;            
+            margin-left: 28%;
+            background-color: aquamarine;
         }
 
         #lilbox {
+            
             position: absolute;
             width: 32%;
             height: 90px;
