--- a/hyudaisubs.html
+++ b/hyudaisubs.html
@@ -65,7 +65,8 @@
         #box>button {
             padding: 10px 120px;
             margin-top: 30px;
-            margin-left: 25%;
+            margin-left: 29%;
+            background-color: aquamarine;
         }
 
         #lilbox {
@@ -277,7 +278,7 @@
 
             <br>
 
-            <button>Search</button>
+            <button> Search </button>
 
         </div>
 
